# src/main/kotlin/com/wutsi/membership/manager/dto/SearchMemberResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.membership.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchMemberResponse(
+    public val members: List<MemberSummary> = emptyList()
+)
